# Nickracker

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  docs.md  vcpkg.json  xlto_cargo_run.bat  xlto_compile_c_and_rust.bat  xlto_download_c_deps.bat
.cargo/: config
.github/actions/setup/: action.yml
.github/actions/setup_no_tess/: action.yml
.github/workflows/: nickracker.yml  solver.yml
capture-test/: Cargo.toml
capture-test/src/: main.rs
console/: Cargo.toml
console/src/: main.rs
solver/: Cargo.toml
solver/src/: lib.rs
src/: bitblt.rs  bmp.rs  capture copy.rs  capture.rs  main.rs  ocr.rs  overlay.rs  tesseract_init_stub.cpp  vault_analyzer.rs
src/bmps/: todo jpg.txt
