[package]
name = "Nickracker"
version = "0.1.0"
edition = "2021"
resolver = "2"
#keywords = ["screenshot", "graphics", "capture", "windows", "window"]
#categories = ["rendering::graphics-api", "graphics"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
single_value_channel = "1.2"
num = "0.4.0"
# OCR
leptess = "0.13.2"
tesseract = "0.10.1"
tesseract-plumbing = "0.6.1"
tesseract-sys = "0.5.10"
leptonica-sys = "0.4.1"
#resize and rbg (To avoid copying a Vec) for resizing
resize = "0.7.2"
rgb = "0.8.25"
#staticvec = "0.11.0"
#minotaur puzzle solver
solver = { path = "solver" }
#subimage finder
find-subimage = "0.1"
bmp = "0.5"
cstr = "0.2.9"

[dependencies.windows]
version = "0.29.0"
features = [
    "alloc",
    "UI",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
]

[build-dependencies]
cc = { version = "1.0" }
vcpkg = "0.2.8"

[workspace]
members = ["console", "capture-test", "solver"]

[profile.release]
debug = true

[profile.fullrel]
codegen-units = 1
inherits = "release"
debug = true
lto = "thin"
